# ForgeX

./: Dockerfile  chatbot.py  chatbot_utils.py  data_preprocessing.py  ignite.py  main.py  pyproject.toml  question.md  readme.md  requirements.txt  start.sh
config/: execution.json  manifest.json
datastore/: state.json
ontology_dc8f06af066e4a7880a5938933236037/: simple_text.py
